--- a/package.json
+++ b/package.json
@@ -16,16 +16,17 @@
     "eslint-plugin-react-native": "^4.0.0",
     "expo": "^47.0.13",
     "expo-cli": "^6.1.0",
+    "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-expo-viewport-units": "0.0.8",
-    "react-native-paper": "^5.1.4",
-    "react-native-vector-icons": "^9.2.0",
     "react-native-maps": "^1.3.2",
+    "react-native-paper": "^5.1.4",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "expo-location": "~15.0.1"
+    "react-native-vector-icons": "^9.2.0",
+    "expo-linear-gradient": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
