--- a/package.json
+++ b/package.json
@@ -9,22 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^16.5.2",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-react-native": "^4.0.0",
     "expo": "^47.0.13",
+    "expo-build-properties": "~0.4.1",
     "expo-cli": "^6.1.0",
+    "expo-firebase-recaptcha": "~2.3.1",
+    "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.16.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-maps": "^1.3.2",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "expo-location": "~15.0.1",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0"
+    "react-native-webview": "^11.26.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
