--- a/package.json
+++ b/package.json
@@ -20,19 +20,20 @@
     "expo-build-properties": "~0.4.1",
     "expo-cli": "^6.1.0",
     "expo-firebase-recaptcha": "~2.3.1",
+    "expo-linear-gradient": "~12.0.1",
     "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.16.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-async-storage": "^0.0.1",
     "react-native-expo-viewport-units": "0.0.8",
     "react-native-maps": "^1.3.2",
     "react-native-paper": "^5.1.4",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-webview": "11.23.1",
     "react-native-vector-icons": "^9.2.0",
-    "expo-linear-gradient": "~12.0.1"
+    "react-native-webview": "11.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
