--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-firebase/app": "^16.5.2",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^6.5.3",
@@ -25,6 +26,7 @@
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.16.0",
     "react": "18.1.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-native": "0.70.5",
     "react-native-async-storage": "^0.0.1",
     "react-native-expo-viewport-units": "0.0.8",
@@ -33,8 +35,7 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-webview": "11.23.1",
-    "@react-native-async-storage/async-storage": "~1.17.3"
+    "react-native-webview": "11.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
