--- a/package.json
+++ b/package.json
@@ -29,13 +29,17 @@
     "react-firebase-hooks": "^5.1.1",
     "react-native": "0.70.5",
     "react-native-async-storage": "^0.0.1",
+    "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-expo-viewport-units": "0.0.8",
     "react-native-maps": "^1.3.2",
     "react-native-paper": "^5.1.4",
+    "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-svg": "^13.7.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-webview": "11.23.1"
+    "react-native-webview": "11.23.1",
+    "react-native-reanimated": "~2.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
