--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-svg": "^13.7.0",
+    "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "11.23.1",
     "lottie-react-native": "5.1.4"
