--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-webview": "11.23.1"
+    "react-native-webview": "11.23.1",
+    "expo-image-picker": "~14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
