--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "oddapp",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -19,9 +18,12 @@
     "expo": "^47.0.13",
     "expo-build-properties": "~0.4.1",
     "expo-cli": "^6.1.0",
+    "expo-firebase-core": "^6.0.0",
     "expo-firebase-recaptcha": "~2.3.1",
+    "expo-image-picker": "~14.0.2",
     "expo-linear-gradient": "~12.0.1",
     "expo-location": "~15.0.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.16.0",
     "lottie-react-native": "5.1.4",
@@ -38,8 +40,7 @@
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-webview": "11.23.1",
-    "expo-image-picker": "~14.0.2"
+    "react-native-webview": "11.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
